src/components/Header/Header.module.css
.header {
    display: grid;
    grid-template-columns: min-content min-content 1fr;
    align-items: center;

    padding: 1rem 2rem;
    background-color: #000000;
    position: sticky;
    top: 0;
    z-index: 101;
    /* opacity: 0.9; */
    background-color: rgba(0, 0, 0, 0.85);
    backdrop-filter: blur(60px);
    position: relative;
}

.header.open {
    background-color: #272727;
}

.header__logo {
    font-family: "Runy Tunes";
    font-size: 1.1rem;
    letter-spacing: 0.2rem;
}

.logo_link {
    color: inherit;
    text-decoration: none;
}

.logo_link:hover {
    filter: brightness(0.8);
}

.logo_text {
    display: none;
    visibility: hidden;
}

.header__nav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 1rem;
    margin-left: 2rem;
}

.header__nav a {
    color: inherit;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
}

.header__nav a:hover {
    filter: brightness(0.6);
}

.header__nav .selected {
    border-bottom: 2px solid white;
}

.header__nav .selected:hover {
    filter: brightness(1);
    cursor: default;
}

.header__user {
    display: flex;
    justify-content: flex-end;
    gap: 1rem;
    grid-column-start: 3;
}

.header__user a {
    color: inherit;
    text-decoration: none;
    font-size: 1.2rem;
}

.header__user a:hover {
    filter: brightness(0.8);
}

.loginBtn {
    color: black !important;
    text-decoration: none;
    padding: .5rem .7rem;
    border: none;
    border-radius: 6px; 
    cursor: pointer;
    background-color: white;
    transition: .2s;
    font-size: 1rem !important;
}

.loginBtn:hover {
    filter: brightness(0.8);
}

@media (max-width: 600px) {
    .header {
        padding: 1rem;
    }
    .header__nav {
        display: none;
    }
    .logo_text {
        display: flex;
        flex-direction: row;
        align-items: center;
        visibility: visible;
        cursor: pointer;
        background: none;
        border: none;
        padding: 0;
        color: inherit;
    }
    .logo_link {
        display: none;
        visibility: hidden;
    }
    .logo_text svg {
        margin-right: .5rem;
        width: 1.5rem;
        height: 1.5rem;
    }
    .menuIcon {
        fill: var(--fg);
        d: var(--menu-icon);
    }
}

